# Swiper

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  config.rs  hotkey.rs  lib.rs  main.rs  ocr.rs  pending.rs  translate.rs  tray.rs  window.rs
src/components/: OpenAISettings.svelte  Providers.svelte
src/lib/: actions.ts  history.ts  lang.ts  markdown.ts  models.ts  repetition.ts  sse.ts  store.ts  tauriFetch.ts  theme.ts  utils.ts
src/services/translate/: index.ts  types.ts
src/services/translate/deeplx/: index.ts
src/services/translate/google/: index.ts
src/services/translate/llm/: chat.ts  claude.ts  index.ts  ollama.ts  params.ts  responses.ts
src/windows/Chat/: App.svelte
src/windows/Config/: App.svelte
src/windows/Menu/: App.svelte
src/windows/Result/: App.svelte
src/windows/Snip/: App.svelte
